# Robotics

./: .gitmodules  LICENSE.txt  README.md  index.html  params.json
RCM/: LICENSE.txt  README.md
RCM/cfg/: rosconsole.config  template_init.cfg
RCM/docs/: Makefile  conf.py  i_and_a_guide.rst  index.rst  make.bat
RCM/scripts/: install_r.sh  rcmp_n  rcmpd  sub_inst_r.sh  sub_uninst.sh
RCM/src/rcm/: CMakeLists.txt  README.md  package.xml
RCM/src/rcm/scripts/: rcmdriver.py
RCM/src/rcm_platform/: __init__.py  rcmp_command.py  rcmp_event.py  rcmp_ext_connector.py  rcmp_inter_communication.py  rcmp_ms.py  rcmp_node.py  rcmp_platform_command.py  rcmp_robotics_data.py  rcmp_service_command.py  rcmp_wd.py
RCM/src/robotics_msgs/: CMakeLists.txt  README.md  package.xml
docs/: Makefile  conf.py  i_and_a_guide.rst  index.rst  make.bat  u_and_p_guide.rst
docs/api/FIROS-apiary/: firos-apiary.apib  firos-apiary.html
docs/api/RCM-apiary/: RCM-apiary.apib  RCM-apiary.html
docs/html/: genindex.html  i_and_a_guide.html  index.html  objects.inv  search.html  searchindex.js  u_and_p_guide.html
scripts/: create_rcm_platform_pkg  create_robotics_pkg  install_m.sh  sub_inst_m.sh  sub_inst_r.sh  uninstall.sh
