<package>
    <name>robotics_msgs</name>
    <version>1.0.0</version>
    <description>
        robotics_msgs defines the common messages for the interaction
        between rcm_driver and FIROS.
    </description>
    <maintainer email="anybody@fiware.org">Whoever wants</maintainer>
    <license>MIT</license>

    <url>http://fiware.org/wiki/robotics_msgs</url>
    <author>Fabio Giuseppe Di Benedetto</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>message_generation</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>

    <export>
    <architecture_independent/>
    </export>
</package>
